Minor changes following Andre and Dmitri reviews